@@ -43,6 +43,7 @@ do
       -XX:-ShrinkHeapInSteps \
       -XX:TieredStopAtLevel=1 \
       -XX:+IgnoreUnrecognizedVMOptions \
+      --enable-native-access=ALL-UNNAMED \
       --add-opens=java.base/java.net=ALL-UNNAMED \
       --add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED \
       -jar $jar_path --port $port &
